# GHA_versioned_docs

./: .buildinfo  .gitignore  Makefile  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/release_artifacts_main-1753926682/rst/: gen_docs.doctree
.doctrees/release_artifacts_main-1753926835/rst/: gen_docs.doctree
.doctrees/release_artifacts_main-1753927063/rst/: gen_docs.doctree
.github/workflows/: run_tests.yaml
_sources/: index.rst.txt
_sources/release_artifacts_main-1753926682/rst/: gen_docs.rst.txt
_sources/release_artifacts_main-1753926835/rst/: gen_docs.rst.txt
_sources/release_artifacts_main-1753927063/rst/: gen_docs.rst.txt
_static/ADF/AIA_2506_1753926682.3002608/api_docs/: search.js
_static/ADF/AIA_2506_1753926682.3002608/test_report/: class_index.html  function_index.html  index.html  status.json  z_be45cdc01bfe54ea___init___py.html  z_be45cdc01bfe54ea_extension_py.html  z_be45cdc01bfe54ea_main_py.html  z_be45cdc01bfe54ea_module_py.html  z_be45cdc01bfe54ea_preprocess_docs_py.html  z_be45cdc01bfe54ea_script_py.html
documentation/combined_docs/source/: conf.py  index.rst
documentation/source/: conf.py  index.rst
documentation/versioned_docs/rst/: gen_docs.rst
release_artifacts_main-1753926682/rst/: gen_docs.html
release_artifacts_main-1753926835/rst/: gen_docs.html
release_artifacts_main-1753927063/rst/: gen_docs.html
src/gha_versioned_docs/: extension.py  preprocess_docs.py  script.py
tests/: test_module.py
(+25 files in other folders)
